crates/etl-api/tests/snapshots/main__pipelines__an_existing_pipeline_can_be_read.snap
---
source: crates/etl-api/tests/pipelines.rs
assertion_line: 430
expression: response.config
---
ApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        BatchConfig {
            max_fill_ms: 5,
            memory_budget_ratio: 0.2,
            max_bytes: 8388608,
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    table_error_retry_max_attempts: Some(
        5,
    ),
    max_table_sync_workers: Some(
        2,
    ),
    max_copy_connections_per_table: Some(
        2,
    ),
    memory_refresh_interval_ms: Some(
        100,
    ),
    replication_lag_refresh_interval_ms: Some(
        10000,
    ),
    memory_backpressure: Some(
        MemoryBackpressureConfig {
            activate_threshold: 0.85,
            resume_threshold: 0.75,
        },
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    invalidated_slot_behavior: Some(
        Recreate,
    ),
    replicator_resources: None,
    ducklake_maintenance: None,
    log_level: Some(
        Info,
    ),
}
